# there_is_a_light_that_never_goes_STDOUT_FILENO

./: Dockerfile  README.md
light/: CMakeLists.txt  DONTREADME.md  README.md  main.c
light/include/: light.h
light/text/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  32b.txt  33.txt  34.txt  34b.txt  35.txt  36.txt  37.txt  38.txt  38b.txt  39.txt  39b.txt  39c.txt  4.txt  40.txt  41.txt  (+33 more)
light/utils/: CMakeLists.txt  ft_split.c  scenes.c  stepthree.c  steptwo.c  utils.c  writing.c
tools/: configure.sh
